--- a/Object-Oriented-JavaScript/connect-four-oo/index.html
+++ b/Object-Oriented-JavaScript/connect-four-oo/index.html
@@ -7,6 +7,7 @@
   <body>
     <div id="game">
       <table id="board"></table>
+      <button id="start-btn">Start Game</button>
     </div>
 
     <script src="connect4.js"></script>
