add form to specify players' colors, create Player class to keep track of number of players and their colors, update functionality to set background color according to the specified color

--- a/Object-Oriented-JavaScript/connect-four-oo/index.html
+++ b/Object-Oriented-JavaScript/connect-four-oo/index.html
@@ -7,8 +7,19 @@
   <body>
     <div id="game">
       <table id="board"></table>
-      <button id="start-btn">Start Game</button>
     </div>
+
+    <form id="start=game">
+      <div>
+        <label for="p1-color">Player One Color:</label>
+        <input type="text" name="p1-color" id="p1-color" />
+      </div>
+      <div>
+        <label for="p2-color">Player Two Color:</label>
+        <input type="text" name="p2-color" id="p2-color" />
+      </div>
+      <button id="start-btn">Start Game</button>
+    </form>
 
     <script src="connect4.js"></script>
   </body>
