--- a/Object-Oriented-JavaScript/connect-four-oo/index.html
+++ b/Object-Oriented-JavaScript/connect-four-oo/index.html
@@ -19,7 +19,10 @@
     >
       <div class="container mb-3">
         <div class="row justify-content-center">
-          <div class="col-6 p-0" style="aspect-ratio: 1 / 1">
+          <div
+            class="col-sm-10 col-lg-8 col-xl-6 p-0"
+            style="aspect-ratio: 1 / 1"
+          >
             <table id="board" class="w-100 h-100"></table>
           </div>
         </div>
@@ -27,7 +30,7 @@
 
       <form id="start=game" class="container">
         <div class="row mb-3 justify-content-center">
-          <div class="col-6">
+          <div class="col-sm-10 col-lg-8 col-xl-6">
             <label for="p1-color" class="form-label">Player One Color:</label>
             <input
               id="p1-color"
@@ -41,7 +44,7 @@
         </div>
 
         <div class="row mb-3 justify-content-center">
-          <div class="col-6">
+          <div class="col-sm-10 col-lg-8 col-xl-6">
             <label for="p2-color" class="form-label">Player Two Color:</label>
             <input
               id="p2-color"
@@ -55,7 +58,7 @@
         </div>
 
         <div class="row">
-          <div class="col offset-md-3">
+          <div class="col-12 offset-sm-1 offset-lg-2 offset-xl-3">
             <button
               type="submit"
               id="start-btn"
